Alterações finais da aula 10/04/2025

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -3,7 +3,7 @@
 <head> {% include "global/partials/_head.html" %} </head>
 <body>
     <header> {% include "global/partials/_header.html" %} </header>
-    <main></main>
+    <main>{% include "paciente/listar.html" %}</main>
     <footer> {% include "global/partials/_footer.html" %} </footer>
 </body>
 </html>
